--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
     <body>
         <h1>
-            C'est mon premier projet
+            C'est mon premier projet!
         </h1>
         <div>
         <div class="item">1</div>
